--- a/app/views/misc/_header.haml
+++ b/app/views/misc/_header.haml
@@ -1,2 +1,10 @@
 %header#main-header
 	=link_to 'Books Index', :root
+	.user
+		- if current_user
+			= link_to 'Logout', destroy_user_session_path, :method => 'delete'
+		- else
+			= link_to 'Login', new_user_session_path
+			= link_to 'Register', new_user_registration_path
+	- flash.each do |key, message|
+		%div.messages{ :class => key}= message
